--- a/src/pages/updateuser/updateuser.css
+++ b/src/pages/updateuser/updateuser.css
@@ -33,7 +33,7 @@
 }
 
 .loginBox{
-    height: 200px;
+    height: 400px;
     padding: 20px;
     background-color: white;
     border-radius: 10px;
@@ -59,18 +59,11 @@
     border-radius: 10px;
     border: none;
     background-color: #0e3a74;
+    ;
     color: white;
     font-size: 20px;
     font-weight: 500;
     cursor: pointer;
-}
-
-.loginButton:focus{
-  outline: none;
-}
-
-.loginButton:disabled{
-  cursor: not-allowed;
 }
 
 .loginForgot{
