First version to the cloud
First version to the cloud

--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -58,12 +58,20 @@
 
 .checkboxitem
 {
-  margin-right: 10px;
+  margin-right: 5px;
+  accent-color: red;
+}
+
+
+
+.checkmark:disabled {
+  color: red;
 }
 
 .checkbox
 {
   font-weight: bold;
+  accent-color: red;
 }
 .postCenter{
     margin: 20px 0;
