Added Upload of files and URLS
Added Upload of files and URLS

--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -125,6 +125,13 @@
   cursor: pointer;
 }
 
+.fileIcon{
+  width: 24px;
+  height: 24px;
+  margin-right: 15px;
+  cursor: pointer;
+}
+
 .postLikeCounter{
     font-size: 15px;
 }
