--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -4,6 +4,8 @@
   -webkit-box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
   box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
   margin: 30px 0;
+  color:#03A062;
+  background-color: #1e1e1e;
 }
 
 .postWrapper {
@@ -54,6 +56,7 @@
   font-size: 16px;
   margin-right: 10px;
   font-weight: bold; 
+  color: darkgray;
 }
 
 .checkboxitem
@@ -140,4 +143,12 @@
     cursor: pointer;
     border-bottom: 1px dashed gray;
     font-size: 15px;
+}
+
+.postIcon{
+  width: 24px;
+  height: 24px;
+  margin-right: 5px;
+  cursor: pointer;
+  color: darkgray
 }
