--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -4,16 +4,18 @@
   overflow-y: scroll;
   position: sticky;
   top: 50px;
+  background-color: #1e1e1e ;
+  color: #03A062
 }
 
 ::-webkit-scrollbar {
   width: 5px;
 }
 ::-webkit-scrollbar-track {
-  background-color: #f1f1f1;
+  background-color: #1e1e1e;
 }
 ::-webkit-scrollbar-thumb {
-  background-color: rgb(179, 179, 179);
+  background-color:   #98FF98;
 }
 
 .sidebarWrapper {
@@ -34,6 +36,7 @@
 
 .sidebarIcon {
   margin-right: 15px;
+  color: darkgray;
 }
 
 .sidebarButton {
