Mayor Upgrade to version 1
Mayor Upgrade to version 1.0
1. Name change to Podium
2. Podium now fully E2EE and GWOKEN enabled
3. Podium now supports sign in with clientNr
4. New sign out function
5. Chatbot is now editable

--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -90,3 +90,21 @@
     font-weight: 500;
     cursor: pointer;
 }
+.logincheckmark {
+  margin-left: 10px; /* adjust as needed */
+  margin-right: 10px; /* adjust as needed */
+  width: 20px;
+  height: 20px;
+  color: black;
+  accent-color: rgb(44, 67, 3);
+}
+
+.logincheckboxLabel{
+  align-items: center;
+  height: 20px;
+
+  font-size: 18px;
+  padding-left: 20px;;
+  color: grey;
+  margin-right: 10px 
+}
