--- a/src/pages/updatechatbot/updatechatbot.css
+++ b/src/pages/updatechatbot/updatechatbot.css
@@ -15,7 +15,40 @@
 
 }
 
-.updatechatbotLeft,
+.updatechatbotLeft
+{
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  background-color: #98FF98;
+  margin-right: 20px;
+  border-radius: 10px;
+  padding: 20px;
+  flex-direction: row;
+}
+.registerListItem
+{
+  flex: 1;
+  margin-left: 10px;
+  list-style: none;
+  background-color: black;
+  padding: 10px;
+  height: 50px;
+  border-radius: 10px;
+  flex-direction: row;
+  
+}
+
+.groupIcon
+{
+  margin-right: 5px;
+}
+
+.linkItem
+{
+  align-self: right;
+}
+
 .updatechatbotRight {
   flex: 1;
   display: flex;
@@ -46,6 +79,9 @@
     justify-content: space-between;
    
 }
+
+
+
 
 .updatechatbotInput{
     height: 50px;
@@ -131,4 +167,15 @@ background-color: black;
     font-weight: 500;
     cursor: pointer;
     margin-top: 5px;
+}
+
+.userList {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  background-color: black;
+  padding: 10px;
+  width: 300px;
+  min-height: 500px;
+  border-radius: 10px;
 }
