--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -1,12 +1,18 @@
+a {
+  color: #03A062;
+}
+
 .topbarContainer {
   height: 50px;
   width: 100%;
-  background-color: #98FF98;
   display: flex;
   align-items: center;
   position: sticky;
   top: 0;
   z-index: 999;
+  color:#03A062;
+  background: black;
+  border: 1px solid green;
 }
 
 .topbarLeft {
@@ -28,7 +34,6 @@
   font-size: 150%;
   margin-left: 20px;
   cursor: pointer;
-  color:black;
   width: 100%
   
 }
@@ -37,19 +42,6 @@
   flex: 2;
 }
 
-.searchbar {
-  width: 100%;
-  height: 30px;
-  background-color: white;
-  border-radius: 30px;
-  display: flex;
-  align-items: center;
-}
-
-.searchIcon {
-  font-size: 20px !important;
-  margin-left: 10px;
-}
 
 .searchInput {
   border: none;
@@ -65,14 +57,12 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  color: white;
 }
 
 .topbarLink {
   margin-right: 10px;
   font-size: 14px;
   cursor: pointer;
-  color: darkgray
 }
 
 .topbarIcons {
